menu styling on index page

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,6 +2,7 @@
 @import url("/assets/CSS/Book/rules.css");
 @import url("/assets/CSS/Hjem/home-about.css");
 @import url("/assets/CSS/Hjem/home-hero.css");
+@import url("/assets/CSS/Hjem/home-menu.css");
 @import url("/assets/CSS/Kontakt/contact-form.css");
 @import url("/assets/CSS/Kontakt/contact-hero.css");
 @import url("/assets/CSS/Kontakt/goodbye-message.css");
