--- a/assets/CSS/Hjem/home-menu.css
+++ b/assets/CSS/Hjem/home-menu.css
@@ -1,4 +1,4 @@
-.index-nav {
+#index-nav {
 
     position: absolute;
 
@@ -6,30 +6,31 @@
     
     margin-top: 2%;
 
+    background-color: transparent;
+
 }
 
-.index-nav ul a li {
+#index-nav ul a li {
     
     color: var(--white);
     font-size: 25px;
-    line-height: 30px;
 
     padding: 6px;
 
-    border-radius: 8%;
+    border-radius: 10px;
 
     transition: color 0.3s, background-color 0.3s;
 
 }
 
-.index-nav ul a li:hover {
+#index-nav ul a li:hover {
 
     background: #404040aa;
     color: var(--golden);
 
     padding: 6px;
 
-    border-radius: 8%;
+    border-radius: 10px;
     
 
 }
