--- a/assets/CSS/base.css
+++ b/assets/CSS/base.css
@@ -1,10 +1,16 @@
 * {
 
     color: var(--dark-color);
-    font-family: var(--main-font) ;
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;    
 
     box-sizing: border-box;
     margin: 0;
+
+}
+
+body {
+
+    background-color: var(--secondary-light-color);
 
 }
