--- a/assets/CSS/Menu/menu-slider.css
+++ b/assets/CSS/Menu/menu-slider.css
@@ -1,72 +1,84 @@
-/*
- CSS for the main interaction
-*/
-.tabset > input[type="radio"] {
-    position: absolute;
-    left: -200vw;
-  }
+h1 {
+
+  font-size: 34px;
+  font-family: 'Nunito', sans-serif;;
+
+  text-align: center;
+
+  padding: 2%;
+
+}
+
+.wrapper {
+
+  width: 50%;
+  margin: auto;
+  margin-bottom: 2%;
+
+  background-color: var(--white);
+
+  border-radius: 10px;
+  box-shadow: 20px 20px 10px #BFACB54f;
+
+}
+
+.buttonWrapper {
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+button {
+
+  letter-spacing: 3px;
+
+  border: none;
+
+  padding: 10px;
+
+  background-color: var(--primary-light-color);
+  color: #232c3d;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+button:hover {
+
+  background-color: var() ;
+
+}
+
+button.active {
+
+  background-color: var(--white);
+}
+
+.active {
+
+  background-color: var(--white);
+
+}
+
+p {
+
+  text-align: left;
+
+  padding: 10px;
+
+}
+
+.content {
+
+  display: none;
+
+  padding: 10px 20px;
+
+}
+
+.content.active {
+
+  display: block;
   
-  .tabset .tab-panel {
-    display: none;
-    
-  }
-  
-  .tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
-  .tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
-  .tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
-  .tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
-  .tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
-  .tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6) {
-    display: block;
-  }
-  
-  /*
-   Styling
-  */
-  body {
-    font: 16px/1.5em "Overpass", "Open Sans", Helvetica, sans-serif;
-    color: #333;
-    font-weight: 300;
-  }
-  
-  .tabset > label {
-    position: relative;
-    display: inline-block;
-    padding: 15px 15px 25px;
-    border: 1px solid transparent;
-    border-bottom: 0;
-    cursor: pointer;
-    font-weight: 600;
-  }
-  
-  .tabset > label::after {
-    content: "";
-    position: absolute;
-    left: 15px;
-    bottom: 10px;
-    width: 22px;
-    height: 4px;
-    background: #8d8d8d;
-  }
-  
-  .tabset > label:hover,
-  .tabset > input:focus + label {
-    color: #06c;
-  }
-  
-  .tabset > label:hover::after,
-  .tabset > input:focus + label::after,
-  .tabset > input:checked + label::after {
-    background: #06c;
-  }
-  
-  .tabset > input:checked + label {
-    border-color: #ccc;
-    border-bottom: 1px solid #fff;
-    margin-bottom: -1px;
-  }
-  
-  .tab-panel {
-    padding: 30px 0;
-    border-top: 1px solid #ccc;
-  }
+}
