--- a/assets/CSS/Mød kattene/cats-setup.css
+++ b/assets/CSS/Mød kattene/cats-setup.css
@@ -1,39 +1,38 @@
 .cat-wrapper {
 
-    margin: 2%;
-
     display: flex;
     flex-direction: column;
 
 }
 
-.image-left dl, .image-left dt, .image-left dd, .image-left p {
+.cat-wrapper img {
 
-    margin-bottom: 1%;  
+    display: flex;
 
-}
+    border-radius: 50%;
 
-.image-left img {
-
-    float: right;
+    margin: 2%;
 
 }
 
-.image-right dl, .image-right dt, .image-right dd, .image-right p {
 
-    margin-bottom: 1%;  
+dl dt {
+
+    font-weight: bold;
+    font-family: nunito;
+    font-size: 24px;
+
+}
+
+dl, .image-left p, .image-right p {
+
+    text-align: center;
+    line-height: 30px;
 
 }
 
 .image-right img {
 
-    float: left ;
-
-}
-
-.cat-wrapper dt {
-
-    font-weight: bold;
-    font-size: 24px;
+    margin-left: 83%;
 
 }
