--- a/assets/CSS/Kontakt/contact-form.css
+++ b/assets/CSS/Kontakt/contact-form.css
@@ -1,4 +1,6 @@
-.contact-container {
+ .contact-container {
+
+    display:flex;
 
     max-width: 70%;
 
@@ -11,57 +13,41 @@
 
     box-shadow: 20px 20px 10px #BFACB54f;
 
-    display: flex;
-    justify-content: space-between  ;
-
 }
 
-.contact-form label {
-
-    font-weight: bold;
-
-}
-
-.contact-form label, 
-.contact-form input, 
-.contact-form textarea {
-
-    margin-bottom: 2%;
-
-}
-
-.contact-form {
+#contact-form {
 
     display: flex;
     flex-direction: column;
 
-    min-width: 50%;
+    width:40%;
+    gap:0.5rem;
 
-    padding: 5%;
+    margin: 5%;
+
+  }
+
+  #contact-form label {
+
+    font-weight: bold;
+
+  }
+
+  #contact-form button {
+
+    margin-top: 5%;
+
+  }
+
+.other-info {
+
+    margin: 11% 5% 5% 5%;   
 
 }
 
 .other-info dt {
 
-    font-weight: bold;
+    margin: 3%;
 
 }
 
-.other-info dt, .other-info dd {
-
-    font-size: 24px;
-    
-    padding-bottom: 2%;
-
-}
-
-.other-info {
-
-    display: flex;
-   
-    min-width: 40%;
-
-    padding-top: 18%;
-    padding-right: 5%;
-
-}
