--- a/assets/CSS/Menu/menu-slider.css
+++ b/assets/CSS/Menu/menu-slider.css
@@ -46,7 +46,7 @@ button {
 
 button:hover {
 
-  background-color: var() ;
+  background-color: var(--secondary-light-color);
 
 }
 
@@ -81,4 +81,35 @@ p {
 
   display: block;
   
+}
+
+/* ------------ TEXT ------------ */
+
+h2 {
+
+  font-size: 30px;
+  color: var(--primary-light-color);
+
+}
+
+.content {
+
+  text-align: center;
+
+}
+
+.content dt {
+
+  font-weight: bold;
+
+  margin: 1% 0%;
+
+}
+
+.content dd {
+
+  font-style: italic;
+
+  margin: 1% 0%;
+
 }
