--- a/assets/CSS/Mød kattene/cats-setup.css
+++ b/assets/CSS/Mød kattene/cats-setup.css
@@ -2,37 +2,86 @@
 
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+
+    width: 70%;
+
+    margin: auto;
+
+    margin-bottom: 3%;
 
 }
 
-.cat-wrapper img {
+.cat-wrapper h1 {
+
+    font-size: 80px;
+    color: var(--white);
+
+}
+
+.cat-text-container {
+
+    width: fit-content;
+    margin: 2rem;
+
+    flex: 3 1;
+
+    padding: 2%;
+
+    border: 2px solid var(--primry-light-color);
+    border-radius: 30px;
+
+    background-color: var(--white);
+
+    box-shadow: 20px 20px 10px #BFACB54f;
+
+}
+
+.image-left,
+.image-right {
+
+    width: 100%;
+    max-height: fit-content;
+
+    overflow: hidden;
 
     display: flex;
+    flex-wrap: wrap;
 
-    border-radius: 50%;
-
-    margin: 2%;
-
-}
-
-
-dl dt {
-
-    font-weight: bold;
-    font-family: nunito;
-    font-size: 24px;
+    gap: 1rem;
 
 }
 
-dl, .image-left p, .image-right p {
 
-    text-align: center;
-    line-height: 30px;
-
-}
-
+.image-left img,
 .image-right img {
 
-    margin-left: 83%;
+    min-width: 200px;
+    min-height: 100%;
+
+    object-fit: cover;
+
+    border-radius: 30px;
 
 }
+
+
+
+.image-right h2 {
+
+    text-align: end;
+
+}
+
+.image-right {
+
+    flex-direction: row-reverse;
+
+}
+
+@media screen and (max-width:600px){
+    body{
+      width: 100%;
+    }
+  }
+
